[package]
name = "rs-tensor-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive", "env"] }
gdal = { version = "0.16.0", features = ["bindgen", "ndarray"] }
heed = "0.11.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
lexical-sort = "0.3.1"
log = "0.4.20"
ndarray = "0.15.6"
rayon = "1.8.0"
regex = "1.10.2"
safetensors = "0.4.1"
walkdir = "2.4.0"
