[tool.poetry]
name = "rico-hdl"
version = "0.1.0"
description = "A fast and easy-to-use Remote sensing Image format COnverter for High-throughput Deep-Learning (rico-hdl)."
authors = ["Kai Norman Clasen <k.clasen@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
safetensors = "^0.4.3"
lmdb = "^1.4.1"
rasterio = "^1.3.10"
more-itertools = "^10.3.0"
typer = "^0.12.3"
rich = "^13.7.1"
shellingham = "^1.5.4"
numpy = "^1"
structlog = "^24.2.0"
tqdm = "^4.66.4"


cffi = "^1.16.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rico-hdl = "rico_hdl.rico_hdl:main"

